--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -104,6 +104,7 @@ BITCOIN_CORE_H = \
   dogecoin.h \
   dogecoin-fees.cpp \
   dogecoin-fees.h \
+  fs.h \
   httprpc.h \
   httpserver.h \
   indirectmap.h \
@@ -352,6 +353,7 @@ libdogecoin_util_a_SOURCES = \
   compat/glibc_sanity.cpp \
   compat/glibcxx_sanity.cpp \
   compat/strnlen.cpp \
+  fs.cpp \
   random.cpp \
   rpc/protocol.cpp \
   support/cleanse.cpp \
