[qa] make CI less trigger happy
Do not run CI if all updated paths in a PR match:

- 'doc/**'
- 'contrib/**'
- '**/*.md'

and on push, if all updated paths match: '**/*.md'

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,14 @@
 name: Continuous Integration
 
 on:
-  - push
-  - pull_request
+  push:
+    paths-ignore:
+      - '**/*.md'
+  pull_request:
+    paths-ignore:
+      - 'doc/**'
+      - 'contrib/**'
+      - '**/*.md'
 
 jobs:
   build:
