--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,6 +13,10 @@ on:
     paths-ignore:
       - '**/*.md'
       - '**/*.txt'
+      - 'contrib'
+      - 'doc'
+      - 'share'
+      - 'qa'
 
 jobs:
   analyze:
