--- a/contrib/init/dogecoind.opt.service
+++ b/contrib/init/dogecoind.opt.service
@@ -1,10 +1,11 @@
-# This variant of the unit file is for package installations.
+# This variant of the unit file is for "opt" add-on installations that do not form part of the default installation.
+# (i.e. out of band installations by the user, not installed by a system package manager like "apt")
 #
 # The relevant paths are:
 #
-#/usr/bin/dogecoind
-#/etc/dogecoin/
-#/var/lib/dogecoin/
+#/opt/dogecoin/dogecoind
+#/etc/opt/dogecoin/
+#/var/opt/dogecoin/
 
 [Unit]
 Description=Dogecoin's distributed currency daemon
@@ -12,7 +13,7 @@ After=network.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/dogecoind -conf=/etc/dogecoin/dogecoin.conf -datadir=/var/lib/dogecoin
+ExecStart=/opt/dogecoin/bin/dogecoind -conf=/etc/opt/dogecoin/dogecoin.conf -datadir=/var/opt/dogecoin
 
 KillSignal=SIGINT
 Restart=always
@@ -40,8 +41,8 @@ TemporaryFileSystem=/:ro
 BindReadOnlyPaths=/etc/ /lib/ /lib64/
 
 # Add daemon paths
-BindReadOnlyPaths=/usr/bin/dogecoind /etc/dogecoin/
-BindPaths=/var/lib/dogecoin
+BindReadOnlyPaths=/opt/dogecoin/ /etc/opt/dogecoin/
+BindPaths=/var/opt/dogecoin/
 
 ### Restrict access to system.
 
