--- a/configure.ac
+++ b/configure.ac
@@ -189,6 +189,12 @@ AC_ARG_WITH([armv8-crypto],
   [armv8_crypto=$withval],
   [armv8_crypto=no])
 
+AC_ARG_WITH([armv82-crypto],
+  [AS_HELP_STRING([--with-armv82-crypto],
+  [Build with armv8.2 crypto sha512 (default is no)])],
+  [armv82_crypto=$withval],
+  [armv82_crypto=no])
+
 AC_ARG_WITH([protoc-bindir],[AS_HELP_STRING([--with-protoc-bindir=BIN_DIR],[specify protoc bin path])], [protoc_bin_path=$withval], [])
 
 AC_ARG_ENABLE(man,
@@ -814,6 +820,13 @@ if test x$armv8_crypto = xyes; then
   AC_MSG_RESULT(yes)
   AC_DEFINE(USE_ARMV8, 1, [Define this symbol if armv8 crypto works])
   CXXFLAGS="$CXXFLAGS -march=armv8-a+crypto"
+fi
+
+if test x$armv82_crypto = xyes; then
+  AC_MSG_CHECKING([whether to build with armv8.2 crypto sha512])
+  AC_MSG_RESULT(yes)
+  AC_DEFINE(USE_ARMV82, 1, [Define this symbol if armv8.2 crypto works])
+  CXXFLAGS="$CXXFLAGS -march=armv8.2-a+crypto+sha3"
 fi
 
 if test x$use_pkgconfig = xyes; then
