--- a/src/Makefile.bench.include
+++ b/src/Makefile.bench.include
@@ -23,7 +23,8 @@ bench_bench_dogecoin_SOURCES = \
   bench/base58.cpp \
   bench/lockedpool.cpp \
   bench/perf.cpp \
-  bench/perf.h
+  bench/perf.h \
+  bench/scrypt.cpp
 
 # bench_bench_dogecoin_SOURCES_DISABLED = \
 #   bench/checkblock.cpp \        # disabled because this checks a specific bitcoin block
