fix: misnamed header file in Makefile.am

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -157,7 +157,7 @@ BITCOIN_CORE_H = \
   util.h \
   utilmoneystr.h \
   utiltime.h \
-  utilstr.h \
+  utilstring.h \
   validation.h \
   validationinterface.h \
   versionbits.h \
