--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -135,6 +135,7 @@ BITCOIN_TESTS =\
   test/testutil.h \
   test/timedata_tests.cpp \
   test/transaction_tests.cpp \
+  test/txrequest_tests.cpp \
   test/txvalidationcache_tests.cpp \
   test/versionbits_tests.cpp \
   test/uint256_tests.cpp \
